[project]
name = "async-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "codetiming>=1.4.0",
    "fastapi[standard]>=0.118.0",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "ty>=0.0.1a21",
]
